# kba_market_analysis

./: .gitignore  03_Artur_neuzulassungen.ipynb  LICENSE  README.md  _0_push_processed_data.ipynb  _1_Artur_fz8.ipynb  _2_Artur_fz10.ipynb  data_loadinf_fz2.ipynb  data_loading.ipynb  environment.yml  mkdocs.yml  motivation.md  play_around.ipynb  pyproject.toml  readme_20.06.md  requirements.txt  test.ipynb
.cursor/rules/: data-analytics.mdc  guidelines-for-writing-postgres-sql.mdc
__temp/: Population.csv  _eu_recall_2025-06-09.csv  _modellreihen.csv  _rueckruf_2025-06-09.csv  fz_08.16_raw.csv  fz_08.2_raw.csv  fz_08.3_raw.csv  fz_08.6_pivot.csv  fz_08.6_raw.csv  fz_08.7_raw.csv  fz_08.8_raw.csv  fz_08.9_raw.csv  fz_1.1_raw.csv  fz_1.2_raw.csv  fz_10.1_raw.csv
docs/: data-dictionary.md
documentation/01 Python/: DATA_CLEANING_DOCUMENTATION_TEMPLATE.md
documentation/01 Python/Artur/: FZ10_DATA_CLEANING.md  FZ8_2020-2022_DATA_CLEANING.md  FZ8_DATA_CLEANING.md
documentation/01 Python/Jan/analysze_headers/: HEADER_ANALYSIS_DOCUMENTATION.md
documentation/01 Python/Jan/data_cleaning/: DATA_CLEANING_FZ1.1_DOCUMENTATION.md  DATA_CLEANING_FZ2.2_DOCUMENTATION.md  DATA_CLEANING_FZ2.4_DOCUMENTATION.md  DATA_CLEANING_FZ3.1_DOCUMENTATION.md  DATA_CLEANING_FZ6.1_DOCUMENTATION.md
documentation/01 Python/Technical comparison/: script_comparison.md
notebooks/: _1_fz8_2020-2022.ipynb  _3_fz10.ipynb  _5_Artur_fz2.ipynb  _9_push_processed_data.ipynb
scripts/: 04_push_processed_data.ipynb  _1_Artur_fz8_2020-2022.ipynb  _2_Artur_fz8_2023-2025.ipynb  _3_Artur_fz10.ipynb  _4_Artur_fz1.ipynb  _5_Artur_fz2.ipynb  _6_Artur_fz3.ipynb  _9_push_processed_data.ipynb
scripts copy 2/: _2_Artur_fz8_2023-2025.ipynb  _9_push_processed_data.ipynb
scripts/01 Jupyter Notebooks/: data_loading_fz1.ipynb
scripts/02 Analyze headers/: analyze_headers_FZ2.4.py  analyze_headers_FZ2_2.py  analyze_headers_FZ3.1.py
scripts/03 Clean data/: data_cleaning_FZ1.1.py  data_cleaning_FZ2.2.py  data_cleaning_FZ2.4.py  data_cleaning_FZ3.1.py  data_cleaning_FZ6.1.py  process_data_FZ2.2.py
scripts/old/: _3_Artur_fz83_fz10_merge_old.ipynb
scripts/working_final/: _1_Artur_fz8_2020-2022.ipynb  _5_Artur_fz2.ipynb  _9_push_processed_data.ipynb
tableau/: fz_8.6_region_20250623.twbx  fz_8.7_color_20250623.twbx  fz_8.8_age_20250623.twbx
