[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kba-market-analysis"
description = "Production-grade ETL pipeline for German vehicle registration data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = ["Artur Jodkowski", "Jan Tarnaske"], email = ["artur.jodkowski@gmail.com", "jan@tarnaske.com"]},
]
maintainers = [
    {name = ["Artur Jodkowski", "Jan Tarnaske"], email = ["artur.jodkowski@gmail.com", "jan@tarnaske.com"]},
]
keywords = ["automotive", "market-analysis", "etl", "kba", "vehicle-registration", "germany"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
]
dynamic = ["version"]

dependencies = [
    "pandas>=1.5.0,<2.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "xlrd>=2.0.0",
    "sqlalchemy>=1.4.0,<2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=0.19.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "great-expectations>=0.15.0",
    "pandas-profiling>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "isort>=5.10.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
    "nbconvert>=6.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
all = [
    "kba-market-analysis[dev,docs,jupyter,viz]",
]

[project.scripts]
kba-analysis = "kba_analysis.cli.main:main"

[project.urls]
Homepage = "https://github.com/yedkowskij/kba_market_analysis"
Documentation = "https://kba-market-analysis.readthedocs.io/"
Repository = "https://github.com/yedkowskij/kba_market_analysis"
"Bug Tracker" = "https://github.com/yedkowskij/kba_market_analysis/issues"

[tool.setuptools]
packages = {find = {where = ["src"], exclude = ["tests*", "docs*"]}}

[tool.setuptools.dynamic]
version = {attr = "kba_analysis.__version__"}

[tool.setuptools.package-data]
"*" = [
    "config/*.yaml",
    "templates/*.sql",
    "schemas/*.json",
]

# =============================================================================
# DEVELOPMENT TOOLS CONFIGURATION
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "openpyxl.*",
    "great_expectations.*",
    "pandas_profiling.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/kba_analysis",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/kba_analysis"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]

# =============================================================================
# JUPYTER CONFIGURATION
# =============================================================================

[tool.jupyter]
# Jupyter notebook configuration
notebook_dir = "notebooks"
port = 8888
ip = "127.0.0.1"
allow_root = false

# =============================================================================
# PRE-COMMIT CONFIGURATION
# =============================================================================

[tool.pre-commit]
repos = [
    {
        repo = "https://github.com/pre-commit/pre-commit-hooks",
        rev = "v4.4.0",
        hooks = [
            "trailing-whitespace",
            "end-of-file-fixer",
            "check-yaml",
            "check-added-large-files",
            "check-json",
            "check-toml",
        ]
    },
    {
        repo = "https://github.com/psf/black",
        rev = "22.12.0",
        hooks = ["black"]
    },
    {
        repo = "https://github.com/pycqa/isort",
        rev = "5.12.0",
        hooks = ["isort"]
    },
    {
        repo = "https://github.com/pycqa/flake8",
        rev = "6.0.0",
        hooks = ["flake8"]
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v0.991",
        hooks = ["mypy"]
    },
] 